@@ -46,6 +46,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityModel.cs" />
+    <Compile Include="Fluent\FluentPropertyModel.cs" />
+    <Compile Include="Fluent\FluentEntityModel.cs" />
+    <Compile Include="Fluent\ModelExtensions.cs" />
+    <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyModel.cs" />
   </ItemGroup>
